--- a/MIS_2019/Views/Shared/_Layout2.cshtml
+++ b/MIS_2019/Views/Shared/_Layout2.cshtml
@@ -5,11 +5,11 @@
  
     <title>MIS 2019</title>
     <meta charset="utf-8">
-    @*<meta name="viewport" content="width=device-width, initial-scale=1">*@
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    @*<meta name="viewport" content="width=device-width" />*@
+    <meta name="viewport" content="width=device-width" />
 </head>
 <body style="padding-top:100px;">
     <nav>
@@ -18,7 +18,7 @@
     <div id="body">
         @RenderSection("featured", required: false)
         <div class="container">
-            @RenderBody();
+            @RenderBody()
         </div>
     </div>
     @RenderSection("scripts", required: false)
