--- a/MIS_2019/Views/Shared/_MenuPartial.cshtml
+++ b/MIS_2019/Views/Shared/_MenuPartial.cshtml
@@ -4,88 +4,92 @@
 
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
-        <nav>
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">MIS WEB</a>
-                <a class="navbar-btn"onclick="showHome()" href="#">Form</a>
-                <a class="navbar-btn " onclick="showReportList()" href="#">Report</a>
-            </div>
-            
-              
+        <div class="navbar-nav nav">
+            <nav>
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="http://www.saudisoft.com/"> <img id="Img1" src="~/Images/MISlogo2.png" alt="" /> </a>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li> <img src="~/Images/SSlogo.png" /></li> 
+                        @if (Session["LoginCredentials"] != null)
+                        {
+                            <li>@Html.ActionLink("Logout", "LoginPage", "Logout")</li>
+                        }
+                        else
+                        {
+                            <li>@Html.ActionLink("Login", "LoginPage", "Login")</li>
+                        }
 
-        
-            <ul class="nav navbar-nav navbar-right">
-                @if (Session["LoginCredentials"] != null)
-                {
-                    <li>@Html.ActionLink("Logout", "LoginPage", "Logout")</li>
-                }
-                else
-                {
-                    <li>@Html.ActionLink("Login", "LoginPage", "Login")</li>
-                }
+                    </ul>
+                </div>
+            </nav>
+        </div>
+        <div class="navbar-nav nav">
+            <nav id="tab1">
+                <ul class="nav navbar-nav">
+                    <li><a onclick="showHome()" href="#">Form</a></li>
+                    <li><a onclick="showReportList()" href="#">Report</a></li>
+                </ul>
+            </nav>
+            <nav id="Report">
+                <ul class="nav navbar-nav">
+                    @if (Session["ReportMenu"] != null)
+                        {
 
-            </ul>
-        </nav>
-
-        <nav id="Report">
-            <ul class="nav navbar-nav">
-                @if (Session["ReportMenu"] != null)
-                {
-
-                    List<MIS_2019.Models.MainMenuModel> MN = new List<MIS_2019.Models.MainMenuModel>();
-                    MN = (List<MIS_2019.Models.MainMenuModel>)Session["ReportMenu"];
-                    //var groupByMenu = MenuMaster.GroupBy(x => x.MainMnuName);
-
-
-                    foreach (var MenuList in MN)
-                    {
-
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">@MenuList.MnuName<span class="caret"></span></a>
-                            <ul class="dropdown-menu" style="column-count : 2;grid-auto-columns:min-content; column-fill: balance; ">
-                                @foreach (var SubMenuList in MenuList.SubMainName)
-                                {
-
-                                    <li><a href="#">@SubMenuList</a></li>
-                                }
-                            </ul>
-                        </li>
-
-                    }
-                }
-
-            </ul>
-        </nav>
-
-        <nav id="Form"  style="display: none;">
-            <ul class="nav navbar-nav">
-                @if (Session["FormMenu"] != null)
-                {
-
-                    List<MIS_2019.Models.MainMenuModel> MN = new List<MIS_2019.Models.MainMenuModel>();
-                    MN = (List<MIS_2019.Models.MainMenuModel>)Session["FormMenu"];
-                    //var groupByMenu = MenuMaster.GroupBy(x => x.MainMnuName);
+                            List<MIS_2019.Models.MainMenuModel> MN = new List<MIS_2019.Models.MainMenuModel>();
+                            MN = (List<MIS_2019.Models.MainMenuModel>)Session["ReportMenu"];
+                            //var groupByMenu = MenuMaster.GroupBy(x => x.MainMnuName);
 
 
-                    foreach (var MenuList in MN)
-                    {
+                            foreach (var MenuList in MN)
+                            {
 
-                        <li class="dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" href="#">@MenuList.MnuName<span class="caret"></span></a>
-                            <ul class="dropdown-menu" style="column-count : 2;grid-auto-columns:min-content; column-fill: balance; ">
-                                @foreach (var SubMenuList in MenuList.SubMainName)
-                                {
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">@MenuList.MnuName<span class="caret"></span></a>
+                        <ul class="dropdown-menu" style="column-count : 2;grid-auto-columns:min-content; column-fill: balance; ">
+                            @foreach (var SubMenuList in MenuList.SubMainName)
+                                        {
 
                                     <li><a href="#">@SubMenuList</a></li>
-                                }
-                            </ul>
-                        </li>
+                                        }
+                        </ul>
+                    </li>
 
-                    }
-                }
+                            }
+                        }
 
-            </ul>
-        </nav>
+                </ul>
+            </nav>
+
+            <nav id="Form" style="display: none;">
+                <ul class="nav navbar-nav">
+                    @if (Session["FormMenu"] != null)
+                        {
+
+                            List<MIS_2019.Models.MainMenuModel> MN = new List<MIS_2019.Models.MainMenuModel>();
+                            MN = (List<MIS_2019.Models.MainMenuModel>)Session["FormMenu"];
+                            //var groupByMenu = MenuMaster.GroupBy(x => x.MainMnuName);
+
+
+                            foreach (var MenuList in MN)
+                            {
+
+                    <li class="dropdown">
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">@MenuList.MnuName<span class="caret"></span></a>
+                        <ul class="dropdown-menu" style="column-count : 2;grid-auto-columns:min-content; column-fill: balance; ">
+                            @foreach (var SubMenuList in MenuList.SubMainName)
+                                        {
+
+                                    <li><a href="#">@SubMenuList</a></li>
+                                        }
+                        </ul>
+                    </li>
+
+                            }
+                        }
+
+                </ul>
+            </nav>
+        </div>
     </div>
 </nav>
 <script>
